# raic2020

./: .gitignore
local-runner/: aicup2020-preferences.json
strategy/: AttackManager.cpp  AttackManager.hpp  BuildingManager.cpp  BuildingManager.hpp  CMakeLists.txt  DebugInterface.hpp  GameState.cpp  GameState.hpp  InfluenceMap.hpp  MyStrategy.cpp  MyStrategy.hpp  Task.hpp  UnitManager.cpp  UnitManager.hpp  common.hpp  main.cpp
strategy/include/: AttackManager.hpp  BuildingManager.hpp  DebugInterface.hpp  GameState.hpp  InfluenceMap.hpp  Task.hpp  common.hpp
strategy/model/: Action.hpp  AttackAction.cpp  AttackAction.hpp  AttackProperties.hpp  AutoAttack.hpp  BuildAction.hpp  BuildProperties.hpp  Camera.hpp  ClientMessage.hpp  Color.hpp  ColoredVertex.cpp  ColoredVertex.hpp  DebugCommand.hpp  DebugData.hpp  DebugState.hpp  Entity.hpp  EntityAction.cpp  EntityAction.hpp  EntityProperties.hpp  EntityType.hpp  MoveAction.hpp  Player.hpp  PlayerView.hpp  PrimitiveType.hpp  RepairAction.hpp  RepairProperties.hpp  ServerMessage.hpp  Vec2Float.hpp  Vec2Int.cpp  Vec2Int.hpp
strategy/source/: AttackManager.cpp  BuildingManager.cpp  DebugInterface.cpp  GameState.cpp  MyStrategy.cpp  Task.cpp  UnitManager.cpp
